Sat Nov 27 17:20:02 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/README.releasing branching instructions
	
Sat Nov 27 17:05:00 EST 2004	JK Lowden <jklowden@schemamania.org>
	* INSTALL.CVS updated toolchain versions.
	
Sat Nov 27 16:57:12 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml NEWS README updated for 0.63 release
	
Wed Nov 17 13:44:25 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c Fix null handling and don't close closed errfile.
	* src/apps/freebcp.c dump username to stderr if FREEBCP envar set
	
Tue Nov  9 10:53:20 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c:
	- fix possible compile error including both regex.h and libgen.h

Sun Nov  7 10:35:33 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c:
	- set correctly TDSCONNECTION->server_name

Sun Nov  7  9:58:22 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c src/apps/defncopy.c src/tds/config.c:
	* vms/README.vms vms/config_h.vms vms/descrip_mms.template:
	- applied Craig A. Berry patch for VMS, fixes some problems with
	  bsqldb and defncopy

Fri Nov  5 10:05:20 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c src/apps/defncopy.c src/dblib/dblib.c:
	- remove use of snprintf

Thu Nov  4 08:10:45 EST 2004	JK Lowden <jklowden@schemamania.org>
	* TODO updated ct-lib items

Tue Nov  2 09:46:31 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/ct.c support CS_VER_STRING (ML: 2 November 2004)
	* locales.conf added Brazil
	* doc/htdoc/faq.html fix typo 
	* samples/test.pl accept query as last parameter
	* src/tds/config.c s/THREAD_SAFE/_REENTRANT/

Thu Oct 28 15:15:55 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/binary_test.c src/odbc/unittests/common.h:
	* src/odbc/unittests/convert_error.c src/odbc/unittests/data.c:
	* src/odbc/unittests/date.c src/odbc/unittests/earlybind.c: