@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<!-- $Id: news.html,v 1.5 2004-01-15 05:27:24 jklowden Exp $ -->
+<!-- $Id: news.html,v 1.6 2004-11-27 22:59:23 jklowden Exp $ -->
 <head>
 <title>FreeTDS.org</title>
 </head>
@@ -31,11 +31,23 @@ News&nbsp;&nbsp;|&nbsp;
 <table width="80%" align="center">
 
 <!--  item  -->
+<tr bgcolor="#c9c9ff"><td>FreeTDS announces Version 0.63 branch </td></tr>
+<tr>
+<td>
+<br />
+Version 0.63RC1 is now available in the <tt></tt><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/">stable</a></tt> directory on Ibiblio.  Enjoy,and please test on your favorite architecture.  
+(27 November 2004)   
+<br />
+<br />
+</td>
+</tr>
+
+<!--  item  -->
 <tr bgcolor="#c9c9ff"><td>FreeTDS announces Version 0.62.1 </td></tr>
 <tr>
 <td>
 <br />
-Inludes a small but significant fix to token.c.  <a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/freetds-stable.tgz">Version 0.62.1</a> 
+Includes a small but significant fix to token.c.  <a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/freetds-stable.tgz">Version 0.62.1</a> 
 (15 Jan  2004)   
 <br />
 <br />
