@@ -1,3 +1,6 @@
+Sat Nov 27 17:58:08 EST 2004	JK Lowden <jklowden@schemamania.org>
+	* doc/htdoc/news.html announce 0.63RC1
+	
 Sat Nov 27 17:20:02 EST 2004	JK Lowden <jklowden@schemamania.org>
 	* doc/README.releasing branching instructions
 	
